[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Andreas Klintberg <ankl@kth.se>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
